Bug 1837482 - Make `CountNewlinesInXPLength` and `CountNewlinesInNativeLength` not scan `TextFragment` directly r=smaug

`TextFragment::CharAt()` considers whether it's in the 2b-mode or not in each
call in theory.  Let's create dependent string for skipping the redundant
checks.

Depends on D180767

Differential Revision: https://phabricator.services.mozilla.com/D180768